--- a/binary_installation/turtle.yml
+++ b/binary_installation/turtle.yml
@@ -2,15 +2,10 @@
 - hosts: localhost
   tasks:
 
-   - name: Add Local Packages
-     command: sh -c ./update.sh
-     become: yes
-     become_method: sudo
-
-   - name: Add ROS repository
-     command: sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
-     become: yes
-     become_method: sudo
+   # - name: Add Local Packages
+   #   command: sh -c ./update.sh
+   #   become: yes
+   #   become_method: sudo
 
    - name: Add apt-key
      command: apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net --recv-key 0xB01FA116
@@ -47,3 +42,5 @@
    - name: Install Ros-Ar-Track
      apt: pkg=ros-indigo-ar-track-alvar-msgs state=installed
 
+   # - name: Clone InstructionGraphs |  clone  git
+   #   git: repo=https://github.com/anuragkanungo/instructiongraphs.git dest=~/
